welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:7: error: Boolean(true) does not take parameters
			return true();
                                   ^hasTeen:11: error: Boolean(true) does not take parameters
 	   return true();
                      ^hasTeen:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( c > 13 && c <19){
        ^